2001-11-12  Jody Goldberg <jgoldberg@home.com>

	* src/workbook-control-gui.c (cb_file_send) : extra safety.  Ensure
	that the mail component stayed activated.  It is possible that it
	starts and exits.

2001-11-11  Jody Goldberg <jgoldberg@home.com>

	* src/ranges.c (range_split_ranges) : remove the unused copy_fn
	  arg and convert to using GSList.
	(range_fragment) : convert to GSList..
	(range_fragment_free) : ditto.

	* src/format-template.c : Convert several things to use Range *.
	(format_template_check_valid) : split out from.
	(format_template_apply_to_sheet_regions) : here.

	* src/commands.c (cmd_autoformat) : Use format_template_check_valid.
	(cmd_area_set_text_destroy) : range_fragment_free instead of doing it
	  ourselves.
	(cmd_clear_destroy) : ditto.
	(cmd_format_destroy) : ditto.
	(cmd_autoformat_destroy) : ditto.

	* src/xml-io.c (xml_write_selection_clipboard) : fix leak.
	* src/workbook-format-toolbar.c (cb_unmerge_cells) : ditto.
	(cb_merge_cells) : ditto.

2001-11-11  Jody Goldberg <jgoldberg@home.com>

	* src/print.c (print_page) : fix horiz/vert centering in the presence
	  of scaling.

2001-11-10  Jody Goldberg <jgoldberg@home.com>

	* src/workbook-control-gui.c (workbook_menu_format_column) :
	  make col menu consistent with row menu.
	* src/GNOME_Gnumeric.xml : ditto.

2001-11-10  Jody Goldberg <jgoldberg@home.com>

	* src/item-cursor.c (item_cursor_draw) : make block cursors more
	  visually appealing.

	* src/workbook-control-gui.c (sheet_action_add_sheet) : restore the
	  focus to the current sheet so that the new sheet does not get the
	  key events.

	* src/workbook-edit.c (wbcg_editing_expr) : delete.

2001-11-09  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62131
	* src/commands.c (cmd_colrow_outline_change) : The logic is to funky
	  for my health.  I hope this doesn't screw something else up.

2001-11-09  Jody Goldberg <jgoldberg@home.com>
