@@ -45,11 +45,12 @@ int random_tool           (WorkbookControl *context, Sheet *sheet,
 			   int vars, int count, random_distribution_t distribution,
 			   random_tool_t *param, data_analysis_output_t *dao);
 int average_tool          (WorkbookControl *context, Sheet *sheet,
-			   Range *range, int interval, int std_error_flag,
+			   GSList *input, group_by_t group_by,
+			   int interval, int std_error_flag,
 			   data_analysis_output_t *dao);
 int exp_smoothing_tool    (WorkbookControl *context, Sheet *sheet,
-			   Range *range, gnum_float damp_fact,
-			   int std_error_flag,
+			   GSList *input, group_by_t group_by,
+			   gnum_float damp_fact, int std_error_flag,
 			   data_analysis_output_t *dao);
 int ranking_tool          (WorkbookControl *context, Sheet *sheet,
 			   Range *input_range, int columns_flag,
